--- a/ClassesExercises/WpfApp1/WpfApp1.csproj
+++ b/ClassesExercises/WpfApp1/WpfApp1.csproj
@@ -7,11 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Radio.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ClassesApp\ClassesApp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Radio.jpg" />
   </ItemGroup>
 
 </Project>
